--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,54 @@
-node_modules
+# --- Python / Django ---
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Django specific
+*.log
+*.pot
+*.pyc
+*.db
+*.sqlite3
+db.sqlite3
+local_settings.py
+media/
+staticfiles/
+static/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+
+# --- Node / React ---
+node_modules/
+dist/
+build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# --- Editor / OS files ---
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# --- Misc ---
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# --- Optional: ignore migrations if you don't want them versioned ---
+# */migrations/
+
